# Fact-Tori

./: CMakeLists.txt  README.md
resources/: world  world.json
src/: main.cpp
src/controls/: camera.cpp  placement.cpp
src/controls/include/: camera.h  placement.h
src/include/: camera.h  placement.h  world.h
src/world/: world.cpp
src/world/include/: world.h
